--- a/views/layout.html
+++ b/views/layout.html
@@ -33,12 +33,12 @@
 
 
         <main role="main" id="content" class="container">
-          <%- include('area_title.html'); -%>
+          <!-- <%- include('area_title.html'); -%>
           <%- include('example_post.html'); -%>
           <%- include('example_post.html'); -%>
           <%- include('example_post.html'); -%>
 
-          <%- include('end_of_page.html'); -%>
+          <%- include('end_of_page.html'); -%> -->
 
         </main>
 
